// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/Member/components/ProjectManagePermissions should handle empty name in permissions 1`] = `
<body>
  <div>
    <div
      class="ant-space ant-space-vertical"
    >
      <div
        class="ant-space-item"
        style="margin-bottom: 8px;"
      >
        <div
          class="css-10kos8e"
        >
          <svg
            height="16"
            viewBox="0 0 20 20"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m13.28 2.084 4.637 4.638v6.558l-4.638 4.638H6.721L2.083 13.28V6.722l4.638-4.638zM9.165 12.5v1.667h1.667V12.5zm0-6.666v5h1.667v-5z"
              fill="#6094FC"
            />
          </svg>
          <span>
            部分管理权限
          </span>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
          style="flex-wrap: wrap; margin-bottom: -8px;"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px; padding-bottom: 8px;"
          >
            <span
              class="ant-tag ant-tag-default basic-tag-wrapper basic-small-tag-wrapper css-1mjwlcb"
              style="height: 28px;"
            />
          </div>
          <div
            class="ant-space-item"
            style="padding-bottom: 8px;"
          >
            <span
              class="ant-tag ant-tag-default basic-tag-wrapper basic-small-tag-wrapper css-1mjwlcb"
              style="height: 28px;"
            >
              权限2
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/Member/components/ProjectManagePermissions should render no manage permissions 1`] = `
<body>
  <div>
    <div
      class="css-10kos8e"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.875 1.516a2.25 2.25 0 0 1 2.25 0l3.928 2.267a2.25 2.25 0 0 1 1.125 1.95v4.535a2.25 2.25 0 0 1-1.125 1.948l-3.928 2.269a2.25 2.25 0 0 1-2.25 0l-3.928-2.268a2.25 2.25 0 0 1-1.125-1.95V5.733a2.25 2.25 0 0 1 1.125-1.949z"
          stroke="#7D8CA8"
          stroke-width="1.5"
        />
        <path
          d="m5.917 5.917 4.166 4.166M5.917 10.083l4.166-4.166"
          stroke="#7D8CA8"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
      <span>
        无管理权限
      </span>
    </div>
  </div>
</body>
`;

exports[`base/Member/components/ProjectManagePermissions should render no manage permissions when managePermissions is undefined 1`] = `
<body>
  <div>
    <div
      class="css-10kos8e"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.875 1.516a2.25 2.25 0 0 1 2.25 0l3.928 2.267a2.25 2.25 0 0 1 1.125 1.95v4.535a2.25 2.25 0 0 1-1.125 1.948l-3.928 2.269a2.25 2.25 0 0 1-2.25 0l-3.928-2.268a2.25 2.25 0 0 1-1.125-1.95V5.733a2.25 2.25 0 0 1 1.125-1.949z"
          stroke="#7D8CA8"
          stroke-width="1.5"
        />
        <path
          d="m5.917 5.917 4.166 4.166M5.917 10.083l4.166-4.166"
          stroke="#7D8CA8"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
      <span>
        无管理权限
      </span>
    </div>
  </div>
</body>
`;

exports[`base/Member/components/ProjectManagePermissions should render partial manage permissions 1`] = `
<body>
  <div>
    <div
      class="ant-space ant-space-vertical"
    >
      <div
        class="ant-space-item"
        style="margin-bottom: 8px;"
      >
        <div
          class="css-10kos8e"
        >
          <svg
            height="16"
            viewBox="0 0 20 20"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m13.28 2.084 4.637 4.638v6.558l-4.638 4.638H6.721L2.083 13.28V6.722l4.638-4.638zM9.165 12.5v1.667h1.667V12.5zm0-6.666v5h1.667v-5z"
              fill="#6094FC"
            />
          </svg>
          <span>
            部分管理权限
          </span>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
          style="flex-wrap: wrap; margin-bottom: -8px;"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px; padding-bottom: 8px;"
          >
            <span
              class="ant-tag ant-tag-default basic-tag-wrapper basic-small-tag-wrapper css-1mjwlcb"
              style="height: 28px;"
            >
              权限1
            </span>
          </div>
          <div
            class="ant-space-item"
            style="padding-bottom: 8px;"
          >
            <span
              class="ant-tag ant-tag-default basic-tag-wrapper basic-small-tag-wrapper css-1mjwlcb"
              style="height: 28px;"
            >
              权限2
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/Member/components/ProjectManagePermissions should render project admin state 1`] = `
<body>
  <div>
    <div
      class="css-10kos8e"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.875 1.516a2.25 2.25 0 0 1 2.25 0l3.928 2.267a2.25 2.25 0 0 1 1.125 1.95v4.535a2.25 2.25 0 0 1-1.125 1.948l-3.928 2.269a2.25 2.25 0 0 1-2.25 0l-3.928-2.268a2.25 2.25 0 0 1-1.125-1.95V5.733a2.25 2.25 0 0 1 1.125-1.949z"
          stroke="#41BF9A"
          stroke-width="1.5"
        />
        <path
          d="m5.083 8 2.084 2.083 4.166-4.166"
          stroke="#41BF9A"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
      <span>
        项目管理员
      </span>
    </div>
  </div>
</body>
`;
